@@ -13,6 +13,7 @@ import SmartHome.dto.RoomMapper;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static SmartHome.domain.constants.Constants.SENSOR_CONFIG;
 
@@ -52,7 +53,7 @@ public class Ctrl07 {
 
         _roomsDTOAndRooms = RoomMapper.Domain2DTO(rooms);
 
-        return _roomsDTOAndRooms.keySet().stream().toList();
+        return _roomsDTOAndRooms.keySet().stream().collect(Collectors.toList());
     }
 
     /**
@@ -69,7 +70,7 @@ public class Ctrl07 {
         List<Device> devices = room.getDevices();
         _devicesDTOAndDevices = DeviceMapper.Domain2DTO(devices);
 
-        return _devicesDTOAndDevices.keySet().stream().toList();
+        return _devicesDTOAndDevices.keySet().stream().collect(Collectors.toList());
     }
 
     /**
